:sparkles:Feat: create challenge-detail API

--- a/login.html
+++ b/login.html
@@ -15,7 +15,6 @@
 
   <!-- css -->
   <link rel="stylesheet" href="/css/login.css" />
-  >
   <!-- 모듈 css 불러오기 -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css" />
@@ -35,7 +34,7 @@
     </nav>
   </header>
 
-  <section>
+  <section style="margin-bottom: 13%;">
     <!-- 네비바의 우상단 버튼을 누르면 나오는 메뉴는 전체 높이의 50% 위치에 오도록 설계되어 있습니다. 그래서 처음에 보시기 편하도록 module.css에 height:100vh를 강제로 먹여두었습니다. 이부분을 삭제하고 작업해주시면 됩니다. :) -->
 
 
@@ -88,8 +87,6 @@
 
         </div>
       </div>
-    </div>
-
     </div>
   </section>
   <footer>
