--- a/nav.html
+++ b/nav.html
@@ -7,7 +7,7 @@
   <p id="tokneLifeTime"></p>
 </div>
 <h1>
-  <a href="/"><img src="./img/richmaker-logo.png" alt="" /></a>
+  <a href="index.html"><img src="./img/richmaker-logo.png" alt="" /></a>
 </h1>
 <div class="menu_btn" onclick="handleBtn()">
   <i class="xi-bars"></i>
