--- a/updateUserInfo.html
+++ b/updateUserInfo.html
@@ -29,7 +29,7 @@
             <!-- navbar 삽입 -->
         </nav>
     </header>
-    <section>
+    <section style="margin-bottom: 9.1%;">
 
         <div class="container" id="containerBox_one">
             <div class="mb-3">
