:sparkles:Feat: create Challenge Detail Fetch API
상세페이지 API 연결 완

--- a/challenge-detail.html
+++ b/challenge-detail.html
@@ -64,6 +64,18 @@
                     <button type="button" class="btn btn-dark"
                         style="--bs-btn-padding-y: 0.7rem; --bs-btn-padding-x: 1.7rem; --bs-btn-font-size: 1.5rem;"
                         onclick="handleEditPost()">챌린지수정</button>
+                    <button type="button" class="btn btn-dark" id="challengeBookmarkButton"
+                        style="--bs-btn-padding-y: 0.7rem; --bs-btn-padding-x: 1.7rem; --bs-btn-font-size: 1.5rem;">챌린지
+                        참여</button>
+                    <button type="button" class="btn btn-dark" id="challengeLikeButton"
+                        style="--bs-btn-padding-y: 0.7rem; --bs-btn-padding-x: 1.7rem; --bs-btn-font-size: 1.5rem;">좋아요
+                        등록</button>
+                    <button type="button" class="btn btn-dark" id="showBookmarkingList"
+                        style="--bs-btn-padding-y: 0.7rem; --bs-btn-padding-x: 1.7rem; --bs-btn-font-size: 1.5rem;">챌린지
+                        참여 멤버 확인</button>
+                    <button type="button" class="btn btn-dark" id="showLikingList"
+                        style="--bs-btn-padding-y: 0.7rem; --bs-btn-padding-x: 1.7rem; --bs-btn-font-size: 1.5rem;">챌린지
+                        좋아요 등록 멤버 확인</button>
                 </div>
             </fieldset>
         </form>
@@ -83,8 +95,8 @@
         }
     </script>
     <script src="js/conf.js" type="module"></script>
-    <script src="js/nav.js"></script>
-    <script src="js/challenge-detail.js"></script>
+    <script src="js/nav.js" type="module"></script>
+    <script src="js/challenge-detail.js" type="module"></script>
     <!-- script end -->
 </body>
 
