:lipstick:Design: 버튼 디자인 수정

--- a/updateUserInfo.html
+++ b/updateUserInfo.html
@@ -61,17 +61,18 @@
                     수정</button>
             </div>
         </div>
+
         <div class="container" id="containerBox_two">
-            <a href="#">
-                <div id="item-top" class="container-itmes">
-                    <span>비밀 번호 수정</span>
-                </div>
-            </a>
-            <a href="#">
-                <div id="item-bottom" class="container-itmes">
-                    <span>휴면 계정으로 전환</span>
-                </div>
-            </a>
+            <div>
+                <a id="item-top" href="#" type="button" class="btn btn-outline-secondary custom_button"
+                    id="get_auth_code_button">인증 코드 발급
+                    받기</a>
+            </div>
+            <div>
+                <a id="item-bottom" href="#" type="button" class="btn btn-outline-secondary custom_button"
+                    id="update_user_info_button">회원 정보
+                    수정</a>
+            </div>
         </div>
     </section>
     <footer>
