--- a/test.html
+++ b/test.html
@@ -108,7 +108,7 @@
         <div class="myinterestingchallenge">
             <p class="myinteresting">관심있는 챌린지</p>
             <hr class="line2">
-            <div class="row row-cols-1 row-cols-md-3 g-4">
+            <!-- <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col" id="bookmark_box2">
                     <div class="new-challenge">
                         <div class="main-nav">
@@ -128,9 +128,37 @@
                             </div>
                         </section>
                     </div>
+                </div> -->
+
+
+
+
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col" id="bookmark_box">
+                    <div class="new-challenge">
+                        <div class="main-nav">
+                            <span class="new-challenge-count"></span>
+                            <div class="button-cover">
+                                <a href="/list.html?query=new">+</a>
+                            </div>
+                        </div>
+                        <hr class="bar">
+                        <section>
+                            <div class="new-card-container">
+                                <div class="slider slider_box">
+
+                                </div>
+                                <div class="prev"><i class="fa-solid fa-angle-right prev-arrow"></i></div>
+                                <div class="next"><i class="fa-solid fa-angle-right"></i></div>
+                            </div>
+                        </section>
+                    </div>
                 </div>
 
             </div>
+
+
+        </div>
         </div>
         <!-- 소비 달력 들어가는 부분 -->
     </section>
