--- a/challengepost.html
+++ b/challengepost.html
@@ -79,7 +79,7 @@
     <script src="js/api.js" type="module"></script>
     <script src="js/conf.js" type="module"></script>
     <script src="js/nav.js" type="module"></script>
-    <script src="js/challengepost.js"></script>
+    <script src="js/challengepost.js" type="module"></script>
     <!-- script end -->
 </body>
 
