--- a/challenge-detail.html
+++ b/challenge-detail.html
@@ -79,6 +79,19 @@
                 </div>
             </fieldset>
         </form>
+        <form>
+            <fieldset class="postField container" name="postField" id="postField2">
+                <div class="input-group">
+                    <span class="input-group-text">댓글</span>
+                    <textarea class="form-control" aria-label="With textarea" id="comment-write"></textarea>
+                    <button type="button" class="btn btn-secondary" id="commentbutton"
+                        style="--bs-btn-padding-y: 0.7rem; --bs-btn-padding-x: 1.7rem; --bs-btn-font-size: 1.5rem;">작성하기</button>
+                </div>
+                <div id="commentList">
+                    <!--댓글 불러오는 공간-->
+                </div>
+            </fieldset>
+        </form>
     </section>
     <footer>
         <!-- footer 삽입 -->
