:bug:Fix:충돌로 인한 문제 해결

--- a/mypage.html
+++ b/mypage.html
@@ -120,12 +120,12 @@
           <table class="Calendar">
             <thead>
               <tr>
-                <td onClick="prevCalendar();" style="cursor:pointer;">&#60;</td>
+                <td id="prevCalendar" style="cursor:pointer;">&#60;</td>
                 <td colspan="5">
                   <span id="calYear"></span>년
                   <span id="calMonth"></span>월
                 </td>
-                <td onClick="nextCalendar();" style="cursor:pointer;">&#62;</td>
+                <td id="nextCalendar" style="cursor:pointer;">&#62;</td>
               </tr>
               <tr>
                 <td>일</td>
