--- a/consume.html
+++ b/consume.html
@@ -40,12 +40,12 @@
                     <table class="Calendar">
                         <thead>
                             <tr>
-                                <td onClick="prevCalendar();" style="cursor:pointer;">&#60;</td>
+                                <td id="prevCalendar" style="cursor:pointer;">&#60;</td>
                                 <td colspan="5">
                                     <span id="calYear"></span>년
                                     <span id="calMonth"></span>월
                                 </td>
-                                <td onClick="nextCalendar();" style="cursor:pointer;">&#62;</td>
+                                <td id="nextCalendar" style="cursor:pointer;">&#62;</td>
                             </tr>
                             <tr>
                                 <td>일</td>
@@ -120,11 +120,11 @@
             document.querySelector(".menu_btn").classList.toggle("on");
         }
     </script>
-    <script src="js/receipt.js"></script>
     <script src="js/nav.js" type="module"></script>
     <script type="module" src="/js/conf.js"></script>
     <script type="module" src="/js/api.js"></script>
     <script type="module" src="/js/consume.js"></script>
+    <script src="js/receipt.js"></script>
     <!-- script end -->
 
     <script>
