:hammer: 챌린지 발표 전 최종 수정

--- a/nav.html
+++ b/nav.html
@@ -23,7 +23,7 @@
 <div class="nav-drop-menu">
   <ul>
     <li><a id="dropDownMenu_1" href="consume.html">소비 기록 하기</a></li>
-    <li><a id="dropDownMenu_2" href="list.html">리치메이커 챌린지</a></li>
+    <li><a id="dropDownMenu_2" href="challengepost.html">챌린지 작성하기</a></li>
     <li><a id="dropDownMenu_3" href="mypage.html">마이페이지</a></li>
     <li><a id="dropDownMenu_4" href="updateUserInfo.html">회원 정보 수정</a></li>
   </ul>
