--- a/challengepost.html
+++ b/challengepost.html
@@ -40,7 +40,7 @@
                         <input id="main_image" class="form-control" type="file" id="formFile">
                     </div>
                 </div>
-                <img id="preview-image" src="" alt="">
+                <img id="preview-image" src="fake-img/paris.png" alt="">
             </fieldset>
             <fieldset class=" postField container" name="postField" id="postField">
                 <div class="mb-3 text-area">
