--- a/mypage.html
+++ b/mypage.html
@@ -57,6 +57,7 @@
       </header>
       <section class="main">
         <!-- 내정보 프로필에 보여주기 -->
+        <div class="my-challenge-cover">
         <div class="profile-card">
           <div class="myProfile">My Profile</div>
           <div class="card-footer">
@@ -92,10 +93,11 @@
         <div class="consumecontainer">
           <p>내 챌린지 관리</p>
           <hr class="line" />
-          <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="row row-cols-1 row-cols-md-3 g-4 new-card-container">
             <div class="slider"></div>
           </div>
         </div>
+      </div>
 
         <!-- 좋아요 누른 첼린지 -->
         <div class="myinterestingchallenge">
