--- a/consumedetail.html
+++ b/consumedetail.html
@@ -109,7 +109,11 @@
     <script src="js/nav.js" type="module"></script>
     <script type="module" src="/js/conf.js"></script>
     <script type="module" src="/js/api.js"></script>
-    <script type="module" src="/js/consumedetail.js"></script>
+    <script type="module" src="js/consumedetail.js"></script>
+    <script>
+        impor
+        showBookmarkingListAPI();
+    </script>
     <!-- script end -->
 </body>
 
