--- a/mypage.html
+++ b/mypage.html
@@ -75,11 +75,10 @@
         <div class="consumecontainer">
           <p>내 챌린지 관리</p>
           <hr class="line" />
-          <div class="row row-cols-1 row-cols-md-3 g-4 new-card-container">
+          <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="slider"></div>
           </div>
         </div>
-      </div>
 
       </div>
 
