:hammer:Refact: update mypage

--- a/mypage.html
+++ b/mypage.html
@@ -83,7 +83,7 @@
       </div>
       <div class="consumecontainer">
         <p>내 챌린지 관리</p>
-        <hr class="line">
+        <!-- <hr class="line"> -->
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col" id="bookmark_box">
             <div class="new-challenge">
@@ -93,7 +93,7 @@
                   <a href="/list.html?query=new">+</a>
                 </div>
               </div>
-              <hr class="bar">
+              <!-- <hr class="bar"> -->
               <section>
                 <div class="new-card-container">
                   <div class="slider">
